corrected background to be responsive and not repeat but also to cover everything no white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,9 @@ font-family: "LemonLight";
 src: url("../fonts/LemonMilklight.otf");
 }
 body{
-   background-image:url("../images/concrete.jpg");
-  /*background-color:#343e47;*/
+
+   background: url("../images/concrete.jpg") no-repeat center center fixed;
+  background-size: cover;
 }
 
 .container-fluid {
